--- a/register.html
+++ b/register.html
@@ -7,9 +7,9 @@
 <body class="w3-content">
 
 
-	<form action="/action_page.php" class="w3-display-middle w3-container w3-half w3-card-4 w3-light-grey w3-text-black w3-margin">
+	<form action="register-form.php" method="POST" class="w3-display-middle w3-container w3-half w3-card-4 w3-light-grey w3-text-black w3-margin">
 	<h2 class="w3-center">Register</h2>
-	 
+
 	<div class="w3-row w3-section">
 	  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
 		<div class="w3-rest">
@@ -34,7 +34,7 @@
 	<div class="w3-row w3-section">
 	  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
 		<div class="w3-rest">
-			
+
 			<input class="w3-input w3-border" name="pass" type="password" placeholder="Password" id="myPass">
 
 			<!-- An element to toggle between password visibility -->
@@ -60,5 +60,3 @@ function myFunction() {
 </script>
 </body>
 </html> 
-
-
