--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
 
 	<p class="w3-center">
 	<button class="w3-button w3-section w3-teal w3-ripple"> Send </button>
-	<a href="login.html" class="w3-button w3-red">  Cancel </a>
+	<a href="login-page.html" class="w3-button w3-red">  Cancel </a>
 	</p>
 	</form>
 
